background index not showing up fixed

--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -44,7 +44,7 @@ h6 {
 }
 header {
   text-align: center;
-  background-image: url('../images/header_background.jpg');
+  background-image: url('../images/index/header_background.jpg');
   background-size: 100% 100%;
   background-repeat: no-repeat;
   color: #fff;
